# filesentry

./: Cargo.toml  build.rs
src/: backend.rs  config.rs  events.rs  fsevent.rs  inotify.rs  lib.rs  metadata.rs  path.rs  tests.rs  tree.rs  windows.rs  worker.rs
src/fsevent/: sys.rs
