[package]
name = "filesentry"
description = "robust (recursive) file watcher"
authors = ["Pascal Kuthe <pascal.kuthe@pm.me>"]
version = "0.2.2"
edition = "2021"
rust-version = "1.82.0"
license = "MPL-2.0"
repository = "https://github.com/helix-editor/filesentry"
readme = "README.md"

[dependencies]
ecow = "0.2.5"
memchr = "2.7.5"
log = "0.4.27"
hashbrown = "0.15.4"
walkdir = "2.3.3"

# Unix-only (metadata module uses rustix for lstat)
[target.'cfg(unix)'.dependencies]
rustix = { version = "1.0.7", features = ["fs"] }

# Linux + macOS (pending.rs uses bitflags on both platforms)
[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
bitflags = "2.9.0"

# Linux-only (inotify module)
[target.'cfg(target_os = "linux")'.dependencies]
papaya = "0.2.1"
mio = { version = "1.0.4", features = ["os-ext"] }

[dev-dependencies]
ignore = "0.4.23"
tempfile = "3.20.0"
pretty_assertions = "1.4.1"
env_logger = "0.11.8"
lexopt = "0.3.1"
