[package]
name = "filesentry"
description = "robust (recursive) file watcher"
authors = ["Pascal Kuthe <pascal.kuthe@pm.me>"]
version = "0.2.2"
edition = "2021"
rust-version = "1.82.0"
license = "MPL-2.0"
repository = "https://github.com/helix-editor/filesentry"
readme = "README.md"

[dependencies]
ecow = "0.2.5"
memchr = "2.7.5"
log = "0.4.27"
hashbrown = "0.15.4"
walkdir = "2.3.3"
bitflags = "2.9.0"
ignore = "0.4.23"

# Unix-only (metadata module uses rustix for lstat)
[target.'cfg(unix)'.dependencies]
rustix = { version = "1.0.7", features = ["fs"] }

# Linux-only (inotify module)
[target.'cfg(target_os = "linux")'.dependencies]
papaya = "0.2.1"
mio = { version = "1.0.4", features = ["os-ext"] }

# macOS FSEvents backend
[target.'cfg(target_os = "macos")'.dependencies]
core-foundation-sys = "0.8"

# Windows ReadDirectoryChangesW backend
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Threading",
] }


[dev-dependencies]
tempfile = "3.20.0"
pretty_assertions = "1.4.1"
env_logger = "0.11.8"
lexopt = "0.3.1"
